--- a/AD/Transita/src/main/resources/application.properties
+++ b/AD/Transita/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # Puerto donde escucha el servidor una vez se inicie
-server.port=8081
+server.port=8083
 
 
 # Datos de conexion con la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/vuelos
+spring.datasource.url=jdbc:mysql://localhost:3306/transita3
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
