--- a/AD/Transita/src/main/resources/application.properties
+++ b/AD/Transita/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8083
 
 
 # Datos de conexion con la base de datos MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/transita
+spring.datasource.url=jdbc:mysql://localhost:3306/transita3
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
