--- a/AD/Transita/src/main/resources/application.properties
+++ b/AD/Transita/src/main/resources/application.properties
@@ -3,7 +3,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 
 # Puerto donde escucha el servidor una vez se inicie
-server.port=8083
 
 
 # Datos de conexion con la base de datos MySQL
@@ -11,3 +10,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/transita3
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+bezkoder.app.jwtSecret= bezKoderSecretKey
+bezkoder.app.jwtExpirationMs= 86400000
