A falta de funcionar Incidencia

--- a/AD/Transita/src/main/resources/application.properties
+++ b/AD/Transita/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Configuración para el acceso a la Base de Datos
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 # Puerto donde escucha el servidor una vez se inicie
 server.port=8083
