--- a/AD/Transita/pom.xml
+++ b/AD/Transita/pom.xml
@@ -103,6 +103,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
