Rutas con punto incio y final, funcionando en Postman

--- a/AD/Transita/src/main/resources/application.properties
+++ b/AD/Transita/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.datasource.driverClassName=com.mysql.jdbc.Driver
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
+
+# OpenRouteService
+ors.token= 5b3ce3597851110001cf624877b29e7b706641248e293b507b995592
