--- a/AD/Transita/pom.xml
+++ b/AD/Transita/pom.xml
@@ -108,6 +108,16 @@
 			<artifactId>commons-net</artifactId>
 			<version>3.7</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.maps</groupId>
+			<artifactId>google-maps-services</artifactId>
+			<version>0.15.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.8</version>
+		</dependency>
 	</dependencies>
 
 	<build>
