--- a/AD/Transita/pom.xml
+++ b/AD/Transita/pom.xml
@@ -118,6 +118,16 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.8</version>
 		</dependency>
+		<dependency>
+		     <groupId>org.glassfish.jersey.core</groupId>
+		     <artifactId>jersey-client</artifactId>
+		     <version>2.8</version>
+		 </dependency>
+		 <dependency>
+		     <groupId>org.glassfish.jersey.media</groupId>
+		     <artifactId>jersey-media-json-jackson</artifactId>
+		     <version>2.8</version>
+		 </dependency>
 	</dependencies>
 
 	<build>
