--- a/AD/Transita/src/main/resources/application.properties
+++ b/AD/Transita/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Configuración para el acceso a la Base de Datos
+# ConfiguraciÃ³n para el acceso a la Base de Datos
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
