Recupera contraseña completo SIN PROBAR

--- a/AD/Transita/src/main/resources/application.properties
+++ b/AD/Transita/src/main/resources/application.properties
@@ -19,3 +19,9 @@ bezkoder.app.jwtExpirationMs= 86400000
 
 # OpenRouteService
 ors.token= 5b3ce3597851110001cf624877b29e7b706641248e293b507b995592
+
+# email properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=damtransita3@gmail.com
+spring.mail.password=damASIA3
