--- a/AD/Transita/pom.xml
+++ b/AD/Transita/pom.xml
@@ -115,6 +115,10 @@
 			<artifactId>tomcat-embed-core</artifactId>
 			<version>9.0.65</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
