--- a/AD/Transita/src/main/resources/application.properties
+++ b/AD/Transita/src/main/resources/application.properties
@@ -25,3 +25,10 @@ spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=damtransita3@gmail.com
 spring.mail.password=cyct qorg pcsq fqyv
+
+# FTP Host
+spring.ftp.host=127.0.0.1
+spring.ftp.port=21
+ftp.username=web
+ftp.password=web
+ftp.remoteDirectory=/img/puntos
